Revision history for perl module Git-Hooks. -*- text -*-

{{$NEXT}}

  [Fixes]

  - The githooks.checkcommit.check-code directive now works when one pushes
    more than one commit.

2.0.1     2017-06-23 10:53:06-03:00 America/Sao_Paulo

  - Official release of version 2.0.

  [Documentation]

  - The TUTORIAL.pod file was removed and its contents were moved to the
    projects wiki at https://github.com/gnustavo/Git-Hooks/wiki.

  [Internal changes]

  - Substituted Dist::Zilla::Plugin::MakeMaker::Awesome for
    Dist::Zilla::Plugin::MakeMaker::Custom as a Dist::Zilla dependency.

2.0.0     2017-06-15 20:42:17-03:00 America/Sao_Paulo (TRIAL RELEASE)

  This is a major new version of Git::Hooks and there is a few incompatible
  changes mentioned below. Most of them affect only hook and plugin
  developers, but not users. As a user you'll be affected only if you use
  the CheckStructure plugin, which was removed from the distribution. If you
  depend on it, you may reimplement its checks using the CheckFile and the
  CheckReference plugins.

  [Incompatible changes]

  - Replace the Git module by the Git::Repository module as the underlying
    git wrapper. This means that hooks now receive a Git::Repository object
    as their first argument instead of a Git::More object, which may affect
    the code of hooks and plugins.

  - The Git::More module was transformed into the
    Git::Repository::Plugin::GitHooks module to take advantage of
    Git::Repository's plugin architecture. This means that the
    Git::Repository object passed to hooks will have the
    Git::Repository::Plugin::GitHooks plugin enabled, which brings most of
    the methods previously provided by Git::More.

  - The Git::Hooks::nocarp method was removed. The 'nocarp' function is
    meant to be enabled via the githooks.nocarp configuration option only.

  - Git::Hooks now only exports the hook directives and the 'run_hook'